--- a/MyApp4/.project
+++ b/MyApp4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MyApp4</name>
+	<name>CoRe</name>
 	<comment></comment>
 	<projects>
 	</projects>
